2006-05-06  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/createdefs.py:
	* configure.in:
	* gtk/Makefile.am:
	* gtk/gdk-2.10.defs:
	* gtk/gdk-base-types.defs:
	* gtk/gdk-base.defs:
	* gtk/gdk-types.defs:
	* gtk/gdk.defs:
	* gtk/gdk.override:
	* gtk/gtk-2.10-types.defs:
	* gtk/gtk-2.10.defs:
	* gtk/gtk-base-types.defs:
	* gtk/gtk-base.defs:
	* gtk/gtk-types.defs:
	* gtk/gtk.defs:

	Add conditional support for Gtk+ 2.10 add new api.

2006-05-06  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/h2def.py (main): Add support for filtering out definies
	in existing files

	* gtk/gtk.override: Ignore a bunch of stuff

	* gtk/gtk.defs: Add deprecated, broken and unsupported API here,
	to make it easier to merge in the future

	* codegen/override.py (Overrides.__parse_override): 
	* codegen/codegen.py (main): 
	Add ignore-type statement in override

	* codegen/h2def.py: Refactor to use OOP, remove duplicated code

2006-05-01  John Ehresman <jpe@wingware.com>

	* gtk/gdk-types.defs:
	* gtk/gdk.defs:
	* gtk/gdk.override
	* gtk/gtk.defs:
	* gtk/pygtk-private.h:
	GdkRegion wrapper

2006-05-01  John Ehresman <jpe@wingware.com>

	* gtk/gtktreeview.override: Restore override for
	TreeView.get_visible_rect

2006-05-01  Yevgen Muntyan  <muntyan@tamu.edu>

	* codegen/reversewrapper.py (ReverseWrapper.generate): Missing ()
	in Py_BuildValue template string to force a tuple to be created
	even when number of retvals is one.  Reviewed by Gustavo.  Fixes
	Bug 340162 "Missing ()".

2006-04-26  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gdk.override (_wrap_gdk_event_handler_set): 
	* gtk/gdk.defs (event_handler_set): 
	Wrap gdk_event_handler_set

	* gtk/Makefile.am:
	* gtk/gdk.override:
	* gtk/gdkcairo.override:
	* gtk/gdkcolor.override:
	* gtk/gdkdraw.override:
	* gtk/gdkevent.override:
	* gtk/gdkgc.override:
	* gtk/gdkpixbuf.override:
	* gtk/gdkrectangle.override:
	* gtk/gdkwindow.override:
	* gtk/gtktoolbar.override:
	Split out a few more files
