@@ -1,3 +1,4 @@
 ;; -*- scheme -*-
 ;; THIS FILE IS GENERATED - DO NOT EDIT
 (include "gdk-base.defs")
+(include "gdk-2.10.defs")
