@@ -1,3 +1,4 @@
 ;; -*- scheme -*-
 ;; THIS FILE IS GENERATED - DO NOT EDIT
 (include "gtk-base-types.defs")
+(include "gtk-2.10-types.defs")
