@@ -1,3 +1,13 @@
+2006-05-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gtk/Makefile.am: Make sure the defs are regenerated when
+	configure runs, due to possible changes in gtk+ 2.10 detection.
+
+	* gtk/Makefile.am (defs_DATA): Install gdk.defs, gtk.defs,
+	gdk-types.defs, and gtk-types.defs.  Thanks Olav Vitters
+	Fixes bug #340920.
+	
+
 2006-05-06  Johan Dahlin  <jdahlin@async.com.br>
 
 	* codegen/createdefs.py:
